package br.univille.projetofabsoftebooksjulia.entity;
public enum BookStatus {
    READ,
    UNREAD,
    PENDING
}